# Manitoba-Grid-Intelligence

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
config/: kafka_topics.json
dags/: grid_data_pipeline.py
docker/: Dockerfile.airflow  init-db.sql
src/: __init__.py
src/models/: __init__.py
src/processing/: __init__.py
src/simulation/: __init__.py  sensor_simulator.py
terraform/: main.tf
tests/: __init__.py  test_simulation.py
